--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,24 +19,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
 
-            <meta-data android:name="android.app.default_searchable"
-                android:value=".activity.SearchResultActivity">
-
-            </meta-data>
-
         </activity>
         <activity android:name=".activity.DetailActivity">
 
         </activity>
-        <activity android:name=".activity.SearchResultActivity"
-            android:launchMode="singleTop">
-            <intent-filter>
-                <action android:name="android.intent.action.SEARCH"></action>
-            </intent-filter>
+        <activity android:name=".activity.SearchResultActivity">
 
-            <meta-data android:name="android.app.searchable"
-                android:resource="@xml/searchable">
-            </meta-data>
         </activity>
     </application>
 
